--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TabiLog</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              serif: ['"Noto Serif JP"', 'serif'],
-              sans: ['"Zen Maru Gothic"', 'sans-serif'],
-            },
-            colors: {
-              'jp-paper': '#F9F7F2',
-              'jp-ink': '#2D2D2D',
-              'jp-red': '#D65F5F',
-              'jp-blue': '#6B8EAA',
-              'jp-green': '#8BA678',
-              'jp-gold': '#C7B370',
-            }
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="ChenelVlog">
+  <title>TabiLog</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&family=Zen+Maru+Gothic:wght@400;700&display=swap"
+    rel="stylesheet">
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            serif: ['"Noto Serif JP"', 'serif'],
+            sans: ['"Zen Maru Gothic"', 'sans-serif'],
+          },
+          colors: {
+            'jp-paper': '#F9F7F2',
+            'jp-ink': '#2D2D2D',
+            'jp-red': '#D65F5F',
+            'jp-blue': '#6B8EAA',
+            'jp-green': '#8BA678',
+            'jp-gold': '#C7B370',
           }
         }
       }
-    </script>
-    <style>
-      body {
-        background-color: #F9F7F2;
-        color: #2D2D2D;
-      }
-      /* Custom scrollbar for horizontal scrolling */
-      .hide-scrollbar::-webkit-scrollbar {
-        display: none;
-      }
-      .hide-scrollbar {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-      }
-    </style>
-<script type="importmap">
+    }
+  </script>
+  <style>
+    body {
+      background-color: #F9F7F2;
+      color: #2D2D2D;
+    }
+
+    /* Custom scrollbar for horizontal scrolling */
+    .hide-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .hide-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  </style>
+  <script type="importmap">
 {
   "imports": {
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
@@ -54,10 +63,12 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/index.css">
 </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
